--- a/index.html
+++ b/index.html
@@ -201,7 +201,46 @@
 <!----------------------------------------------------------------------------- -->
 
   <!-- Footer -->
-  <footer class="footer" style="display:block;"> 
+  <footer class="footerLarge" style="display:block;"> 
+    <!-- Making space for a logo -->
+    <div class="w3-row">
+      <div class="w3-col w3-container w3-third"></div>
+      <div class="w3-col w3-container w3-third w3-center">
+        <!-- Logo -->
+        <a href="index.html"><img class="logoFooter" src="Images/AstralForge_LightHorizontal.svg" alt="Astral Forge Logo and Name."></a>
+      </div>
+      <div class="w3-col w3-container w3-third"></div>
+    </div>
+
+    <div class="w3-row">
+      <!-- Adding the rest of the footer details -->
+      <div class="w3-col w3-container w3-third">
+        <!-- Contact -->
+        <h2 class="w3-center headingFooter"><b>CONTACT</b></h2>
+        <a href="contact.html"><p class="w3-center" style="color:white; font-size:20px;">Make an inquiry</p></a>
+      </div>
+      
+      <div class="w3-col w3-container w3-third w3-center">
+        <!-- Social -->
+        <h2 class="headingFooter"><b>SOCIAL</b></h2>
+        <!-- Large screens -->
+        <a class="w3-hide-small" href="https://beacons.ai/AstralForge" target="_blank"><img class="socialFooterLarge" src="PagePhotos/FooterSocial.png" alt="Links to social media pages."></a>
+        <!-- Small/medium screens -->
+        <a class="w3-hide-large w3-hide-medium" href="https://beacons.ai/HotBeansWeb" target="_blank"><img class="socialFooterSmall" src="PagePhotos/FooterSocial.png" alt="Links to social media pages."></a>
+      </div>
+      
+      <div class="w3-col w3-container w3-third">
+        <!-- Legal -->
+        <h2 class="w3-center headingFooter"><b>LEGAL</b></h2>
+        <p class="w3-center" style="color:white; font-size:20px;">Privacy | Cookies</p>
+      </div>
+    </div>
+
+    <p style="padding-left:10px; color:#cdcdcd; font-size:15px;">© 2025 Astral Forge. All rights reserved.</p>
+  </footer>
+
+  <!-- Footer -->
+  <footer class="footerSmall" style="display:block;"> 
     <!-- Making space for a logo -->
     <div class="w3-row">
       <div class="w3-col w3-container w3-third"></div>
