--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 <!----------------------------------------------------------------------------- -->
 
   <!-- Footer -->
-  <footer class="footerLarge" style="display:block;"> 
+  <footer class="footerLarge w3-hide-small" style="display:block;"> 
     <!-- Making space for a logo -->
     <div class="w3-row">
       <div class="w3-col w3-container w3-third"></div>
@@ -240,7 +240,7 @@
   </footer>
 
   <!-- Footer -->
-  <footer class="footerSmall" style="display:block;"> 
+  <footer class="footerSmall w3-hide-large w3-hide-medium" style="display:block;"> 
     <!-- Making space for a logo -->
     <div class="w3-row">
       <div class="w3-col w3-container w3-third"></div>
