--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     </div>
     <div class="w3-col w3-container w3-hide-large w3-hide-medium">
       <h2 class="w3-center" style="font-size:25px;"><b>ABOUT US</b></h2>
-      <p style="font-size:15px;">Astral Forge is made up of a team of graduates from the University of Staffordshire and we are working to create immersive story-driven worlds for our players to explore and enjoy. We are a group of friends striving to put their mark on the games industry through our passion and dedication to the craft. Our team consists of programmers, designers, animators, artists, and more who are all experts in their area and are excited to show what they can do in a professional setting.</p>
+      <p style="font-size:15px; text-align:center;">Astral Forge is made up of a team of graduates from the University of Staffordshire and we are working to create immersive story-driven worlds for our players to explore and enjoy. We are a group of friends striving to put their mark on the games industry through our passion and dedication to the craft. Our team consists of programmers, designers, animators, artists, and more who are all experts in their area and are excited to show what they can do in a professional setting.</p>
     </div>
   </div>
 
