--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@
       <p class="w3-center w3-hide-small" style="font-size:15px;">The studio was created to allow our players to escape from reality and find worlds that truly feel like home. The sort of spaces that you would only find in the stars.</p>
       <p class="w3-center w3-hide-medium w3-hide-large" style="font-size:10px; text-align:center;">The studio was created to allow our players to escape from reality and find worlds that truly feel like home. The sort of spaces that you would only find in the stars.</p>
       <!-- Read More button -->
-      <a class="w3-round w3-center readMoreButton" href="index.html">Read More</a>
+      <div class="w3-center"><a class="w3-round readMoreButton" href="index.html">Read More</a></div>
+      <br class="w3-hide-large w3-hide-medium">
     </div>
 
     <!-- Our Mission Header -->
@@ -165,7 +166,8 @@
       <p class="w3-center w3-hide-medium w3-hide-large" style="font-size:10px; text-align:center;">We want to hone that inner fire and make it grow. It’s what makes us and the games
         we create so unique. As a studio, we have one mission: making the best video games possible.</p>
       <!-- Read More button -->
-      <a class="w3-round w3-center readMoreButton" href="index.html">Read More</a>
+      <div class="w3-center"><a class="w3-round readMoreButton" href="index.html">Read More</a></div>
+      <br class="w3-hide-large w3-hide-medium">
     </div>
 
     <!-- Meet the Team Header -->
@@ -184,7 +186,8 @@
       <p class="w3-center w3-hide-medium w3-hide-large" style="font-size:10px; text-align:center;">Whether it’s through the unique atmosphere of the work environment we create or the
         fresh approach to the projects we’re involved in, Astral Forge is a place that allows every memeber of the team to be themselves and showcase their talent and skill.</p>
       <!-- Read More button -->
-      <a class="w3-round w3-center readMoreButton" href="team.html">Read More</a>
+      <div class="w3-center"><a class="w3-round readMoreButton" href="team.html">Read More</a></div>
+      <br class="w3-hide-large w3-hide-medium">
     </div>
   </div>
 
@@ -269,7 +272,7 @@
       </div>
     </div>
 
-    <p style="padding-left:10px; color:#cdcdcd; font-size:15px;">© 2025 Astral Forge. All rights reserved.</p>
+    <p class="w3-center" style="padding-left:10px; color:#cdcdcd; font-size:15px;">© 2025 Astral Forge. All rights reserved.</p>
   </footer>
 
 </body>
