--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         <h2 class="headingFooter"><b>SOCIAL</b></h2>
         <!-- Large screens -->
         <a href="https://www.instagram.com/astralforgeofficial/" target="_blank"><img class="socialFooterLarge" src="Images/InstagramLogo.png" alt="Link to Instagram."></a>
-        <a href="https://bsky.app/profile/astral-forge.bsky.social" target="_blank"><img class="socialFooterLarge" src="Images/Bluesky Logo.png" alt="Link to BlueSky."></a>
+        <a href="https://bsky.app/profile/astral-forge.bsky.social" target="_blank" style="padding:5px;"><img class="socialFooterLarge" src="Images/Bluesky Logo.png" alt="Link to BlueSky."></a>
         <a href="https://www.tiktok.com/@astralforgeofficial" target="_blank"><img class="socialFooterLarge" src="Images/TikTokLogo.png" alt="Link to TikTok."></a>
       </div>
       
