--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@
   <!-- Quote slideshow small -->
   <div class="quoteContainerSmall w3-hide-large">
     <h2 class="quoteContainerTitle w3-center">QUOTES</h2>
-    <p class="item-1">“Sign up to our Mailing List!"<br> <a href="https://astralforge.beehiiv.com/subscribe" target="_blank">Click Here!</a></p>
+    <p class="item-1">Sign up to our Mailing List!<br> <a href="https://astralforge.beehiiv.com/subscribe" target="_blank">Click Here!</a></p>
     <p class="item-2">"An extremely knowledgeable agency that work as part of your team and understand your brand, as well as being lovely to work with day in, day out.”</p>
     <p class="item-3">“Thanks to their work as a third-party vendor, client satisfaction is up. Hot Beans Web proactive and experienced team helped anticipate issues, created a strong relationship that will likely extend to future collaborations.”</p>
   </div>
   <!-- Quote slideshow large -->
   <div class="quoteContainerLarge w3-hide-small w3-hide-medium">
     <h2 class="quoteContainerTitle w3-center">QUOTES</h2>
-    <p class="item-1">“Sign up to our Mailing List!"<br> <a href="https://astralforge.beehiiv.com/subscribe" target="_blank">Click Here!</a></p>
+    <p class="item-1">Sign up to our Mailing List!<br> <a href="https://astralforge.beehiiv.com/subscribe" target="_blank">Click Here!</a></p>
     <p class="item-2">"An extremely knowledgeable agency that work as part of your team and understand your brand, as well as being lovely to work with day in, day out.”</p>
     <p class="item-3">“Thanks to their work as a third-party vendor, client satisfaction is up. Hot Beans Web proactive and experienced team helped anticipate issues, created a strong relationship that will likely extend to future collaborations.”</p>
   </div>
