--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
       <div class="w3-col w3-container w3-third">
         <!-- Legal -->
         <h2 class="w3-center headingFooter"><b>LEGAL</b></h2>
-        <p class="w3-center" style="color:white; font-size:20px;">Privacy | Cookies</p>
+        <p class="w3-center" style="color:white; font-size:20px;">Coming Soon</p>
       </div>
     </div>
 
