--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
     <h2 class="quoteContainerTitle w3-center">QUOTES</h2>
     <p class="item-1">Sign up to our Mailing List!<br> <a href="https://astralforge.beehiiv.com/subscribe" target="_blank">Click Here!</a></p>
     <p class="item-2">
-      <img class="socialFooterLarge" src="Images/UnrealLogo.png" alt="Link to TikTok."><img class="socialFooterLarge" src="Images/MayaLogo.png" alt="Link to TikTok.">
-      <img class="socialFooterLarge" src="Images/MotionBuilderLogo.png" alt="Link to TikTok."><img class="socialFooterLarge" src="Images/PhotoshopLogo.png" alt="Link to TikTok.">
-      <img class="socialFooterLarge" src="Images/BlenderLogo.png" alt="Link to TikTok."><img class="socialFooterLarge" src="Images/SubstanceLogo.png" alt="Link to TikTok.">
-      <img class="socialFooterLarge" src="Images/ViconLogo.png" alt="Link to TikTok."></p>
+      <img class="qImages" src="Images/UnrealLogo.png" alt="Link to TikTok."><img class="qImages" src="Images/MayaLogo.png" alt="Link to TikTok.">
+      <img class="qImages" src="Images/MotionBuilderLogo.png" alt="Link to TikTok."><img class="qImages" src="Images/PhotoshopLogo.png" alt="Link to TikTok.">
+      <img class="qImages" src="Images/BlenderLogo.png" alt="Link to TikTok."><img class="qImages" src="Images/SubstanceLogo.png" alt="Link to TikTok.">
+      <img class="qImages" src="Images/ViconLogo.png" alt="Link to TikTok."></p>
     <p class="item-3">“Thanks to their work as a third-party vendor, client satisfaction is up. Hot Beans Web proactive and experienced team helped anticipate issues, created a strong relationship that will likely extend to future collaborations.”</p>
   </div>
   <!-- Quote slideshow large -->
@@ -123,10 +123,10 @@
     <h2 class="quoteContainerTitle w3-center">QUOTES</h2>
     <p class="item-1">Sign up to our Mailing List!<br> <a href="https://astralforge.beehiiv.com/subscribe" target="_blank">Click Here!</a></p>
     <p class="item-2">
-      <img class="socialFooterLarge" src="Images/UnrealLogo.png" alt="Link to TikTok."><img class="socialFooterLarge" src="Images/MayaLogo.png" alt="Link to TikTok.">
-      <img class="socialFooterLarge" src="Images/MotionBuilderLogo.png" alt="Link to TikTok."><img class="socialFooterLarge" src="Images/PhotoshopLogo.png" alt="Link to TikTok.">
-      <img class="socialFooterLarge" src="Images/BlenderLogo.png" alt="Link to TikTok."><img class="socialFooterLarge" src="Images/SubstanceLogo.png" alt="Link to TikTok.">
-      <img class="socialFooterLarge" src="Images/ViconLogo.png" alt="Link to TikTok."></p>
+      <img class="qImages" src="Images/UnrealLogo.png" alt="Link to TikTok."><img class="qImages" src="Images/MayaLogo.png" alt="Link to TikTok.">
+      <img class="qImages" src="Images/MotionBuilderLogo.png" alt="Link to TikTok."><img class="qImages" src="Images/PhotoshopLogo.png" alt="Link to TikTok.">
+      <img class="qImages" src="Images/BlenderLogo.png" alt="Link to TikTok."><img class="qImages" src="Images/SubstanceLogo.png" alt="Link to TikTok.">
+      <img class="qImages" src="Images/ViconLogo.png" alt="Link to TikTok."></p>
     <p class="item-3">“Thanks to their work as a third-party vendor, client satisfaction is up. Hot Beans Web proactive and experienced team helped anticipate issues, created a strong relationship that will likely extend to future collaborations.”</p>
   </div>
 
