--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
   <!-- Quote slideshow small -->
   <div class="quoteContainerSmall w3-hide-large">
-    <h2 class="quoteContainerTitle w3-center">QUOTES</h2>
+    <h2 class="quoteContainerTitle w3-center">Learn More</h2>
     <p class="item-1">Sign up to our Mailing List!<br> <a href="https://astralforge.beehiiv.com/subscribe" target="_blank">Click Here!</a></p>
     <p class="item-2">
       <img class="qImages" src="Images/UnrealLogo.png" alt="Link to TikTok."><img class="qImages" src="Images/MayaLogo.png" alt="Link to TikTok.">
@@ -120,7 +120,7 @@
   </div>
   <!-- Quote slideshow large -->
   <div class="quoteContainerLarge w3-hide-small w3-hide-medium">
-    <h2 class="quoteContainerTitle w3-center">QUOTES</h2>
+    <h2 class="quoteContainerTitle w3-center">Learn More</h2>
     <p class="item-1">Sign up to our Mailing List!<br> <a href="https://astralforge.beehiiv.com/subscribe" target="_blank">Click Here!</a></p>
     <p class="item-2">
       <img class="qImages" src="Images/UnrealLogo.png" alt="Link to TikTok."><img class="qImages" src="Images/MayaLogo.png" alt="Link to TikTok.">
