--- a/games.html
+++ b/games.html
@@ -66,7 +66,9 @@
     <div>
       <h1 class="w3-center" style="padding-top:100px;"> Fate's Loop </h1>
 
-      <iframe class="w3-center" width="960" height="540" src="https://www.youtube.com/embed/DDPGsVt02Wk" frameborder="0" allowfullscreen></iframe>
+      <div style="text-align: center;" class="w3-center">
+        <iframe width="960" height="540" src="https://www.youtube.com/embed/DDPGsVt02Wk" frameborder="0" allowfullscreen></iframe>
+      </div>
     </div>
     
   
