--- a/contact.html
+++ b/contact.html
@@ -78,13 +78,12 @@
         <h2>astralforge@outlook.com
         <br><br>
         
-        <h3><u><b>Social Media:</b></u></h3>
+        <a href="https://beacons.ai/astralforge" target="_blank" class="contactLinks" style="padding-top:20px;"><h3><u><b>Social Media:</b></u></h3></a>
         <br>
         <a href="https://www.instagram.com/astralforgeofficial/" target="_blank"><img class="socialFooterLarge" src="Images/InstagramLogo.png" alt="Link to Instagram."></a>
         <a href="https://bsky.app/profile/astral-forge.bsky.social" target="_blank" style="padding:25px;"><img class="socialFooterLarge" src="Images/Bluesky Logo.png" alt="Link to BlueSky."></a>
         <a href="https://www.tiktok.com/@astralforgeofficial" target="_blank"><img class="socialFooterLarge" src="Images/TikTokLogo.png" alt="Link to TikTok."></a>
         <br><br>
-        <a href="https://beacons.ai/astralforge" target="_blank" class="contactLinks" style="padding-top:20px;">Click Here to Access Our Beacons Page</a>
         <br><br><br>
     
         <h3><u><b>Mailing List:</b></u></h3>
