--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 
   <!-- Dropdown for the hamburger menu -->
   <div id="menuLinks" class="w3-top w3-center w3-bar-block w3-hide hamburgerMenu w3-animate-opacity" style="background-color:f3eaf5;">
-    <a href="index.html" id="currentPage" class="w3-bar-item topNavLinks">Home</a>
-    <a href="games.html" class="w3-bar-item topNavLinks">Games</a>
-    <a href="team.html" class="w3-bar-item topNavLinks">Teams</a>
-    <a href="contact.html" class="w3-bar-item topNavLinks">Contact</a>
+    <a href="index.html" id="currentPage" class="w3-bar-item topNavLinks"><h2>Home</h2></a>
+    <a href="games.html" class="w3-bar-item topNavLinks"><h2>Games</h2></a>
+    <a href="team.html" class="w3-bar-item topNavLinks"><h2>Teams</h2></a>
+    <a href="contact.html" class="w3-bar-item topNavLinks"><h2>Contact</h2></a>
   </div>
 
   <!-- Navigation bar -->
@@ -54,13 +54,13 @@
     <!-- Aligns the links to the right and hides them on a small page -->
     <div class="w3-right w3-hide-small" style="padding-top:15px;">
       <!-- Home -->
-      <a id="currentPage" class="w3-bar-item topNavLinks" href="index.html">Home</a>
+      <a id="currentPage" class="w3-bar-item topNavLinks" href="index.html"><h2>Home</h2></a>
       <!-- Team -->
-      <a class="w3-bar-item topNavLinks" href="games.html">Games</a>
+      <a class="w3-bar-item topNavLinks" href="games.html"><h2>Games</h2></a>
       <!-- Jobs -->
-      <a class="w3-bar-item topNavLinks" href="team.html">Team</a>
+      <a class="w3-bar-item topNavLinks" href="team.html"><h2>Team</h2></a>
       <!-- Contact -->
-      <a class="w3-bar-item topNavLinks" href="contact.html">Contact</a>
+      <a class="w3-bar-item topNavLinks" href="contact.html"><h2>Contact</h2></a>
     </div>
   </div>
 
