--- a/contact.html
+++ b/contact.html
@@ -86,6 +86,8 @@
         <br><br>
     
         <h3><u><b>Mailing List:</b></u></h3>
+        <br>
+        <script async src="https://subscribe-forms.beehiiv.com/embed.js"></script><iframe src="https://subscribe-forms.beehiiv.com/7c1b3e0a-8d3d-4055-baa1-42455b02768a" class="beehiiv-embed" data-test-id="beehiiv-embed" frameborder="0" scrolling="no" style="width: 350px; height: 369px; margin: 0; border-radius: 0px 0px 0px 0px !important; background-color: transparent; box-shadow: 0 0 #0000; max-width: 100%;"></iframe>
         <br><br>
         <a href="https://astralforge.beehiiv.com/subscribe" target="_blank" class="contactLinks" style="padding-top:20px;">Click Here to Sign Up</a>
         
