--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
         <h2>astralforge@outlook.com
         <br><br>
         
-        <a href="https://beacons.ai/astralforge" target="_blank" class="contactLinks" style="padding-top:20px;"><h3><u><b>Social Media:</b></u></h3></a>
+        <a href="https://beacons.ai/astralforge" target="_blank" style="padding-top:20px;"><h3><u><b>Social Media:</b></u></h3></a>
         <br>
         <a href="https://www.instagram.com/astralforgeofficial/" target="_blank"><img class="socialFooterLarge" src="Images/InstagramLogo.png" alt="Link to Instagram."></a>
         <a href="https://bsky.app/profile/astral-forge.bsky.social" target="_blank" style="padding:25px;"><img class="socialFooterLarge" src="Images/Bluesky Logo.png" alt="Link to BlueSky."></a>
