--- a/games.html
+++ b/games.html
@@ -66,7 +66,7 @@
  <!-- Header video -->
   <header class="w3-display-container w3-content w3-wide pictureOutline w3-hide-small" style="max-width:100%; height:800px; overflow:hidden; padding-top:50px;">
       <div style="text-align: center;" class="w3-center">
-        <iframe class="pictureOutline" width="960" height="540" src="https://www.youtube.com/embed/DDPGsVt02Wk" frameborder="0" allowfullscreen></iframe>
+        <iframe class="pictureOutline" width="100%" src="https://www.youtube.com/embed/DDPGsVt02Wk" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
   </header>
@@ -77,7 +77,7 @@
       <br><br>
       
       <div style="text-align: center;" class="w3-center">
-        <p>You play as Thalor, a retired elven hero who must save his village from a time loop curse.</p>
+        <h2>You play as Thalor, a retired elven hero who must save his village from a time loop curse.</h2>
       </div>
     </div>
     
