--- a/games.html
+++ b/games.html
@@ -77,7 +77,8 @@
       <br><br>
       
       <div style="text-align: center;" class="w3-center">
-        <h2>You play as Thalor, a retired elven hero who must save his village from a time loop curse.</h2>
+        <h3>You play as Thalor, a retired elven hero who must save his village from a time loop curse.</h2>
+        <p>Fate's Loop is a stylised medieval fantasy adventure where you must solve puzzles, fight monsters, build relationships, and more, in order to save the village of Farbell from a time loop curse.</p>
       </div>
     </div>
     
