--- a/games.html
+++ b/games.html
@@ -64,11 +64,8 @@
 <!-- Page Content -->
 <!----------------------------------------------------------------------------- -->
  <!-- Header video -->
-  <header class="w3-display-container w3-content w3-wide pictureOutline w3-hide-small" style="max-width:100%; height:800px; overflow:hidden; padding-top:50px;">
-      <div style="text-align: center;" class="w3-center">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/DDPGsVt02Wk" frameborder="0" allowfullscreen></iframe>
-      </div>
-    </div>
+  <header class="w3-display-container w3-content w3-wide pictureOutline w3-hide-small" style="max-width:100%; height:100%; overflow:hidden; padding-top:50px;">
+      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/DDPGsVt02Wk" frameborder="0" allowfullscreen></iframe>
   </header>
     
     <div>
