--- a/index.html
+++ b/index.html
@@ -288,13 +288,15 @@
       <div class="w3-col m3 w3-center">
         <div class="eventSquare w3-center">
           <h3 style="padding-top:2px;">EGX & MCM Comic Con</h3>
-          <div class="w3-col w3-container eventSquareSmall" style="width:30%">
-            <p><b>26</b></p>
-            <p>DEC</p>
-            <p>2025</p>
-          </div>
-          <div class="w3-col w3-container" style="width:70%">
-            <p>Showcase</p>
+          <div class="w3-row">
+            <div class="w3-col w3-container eventSquareSmall" style="width:30%">
+              <p><b>26</b></p>
+              <p>DEC</p>
+              <p>2025</p>
+            </div>
+            <div class="w3-col w3-container" style="width:70%">
+              <p>Showcase</p>
+            </div>
           </div>
         </div>
       </div>
@@ -302,13 +304,15 @@
       <div class="w3-col m3 w3-center">
         <div class="eventSquare w3-center">
           <h3 style="padding-top:2px;">Ukie Student Conference</h3>
-          <div class="w3-col w3-container eventSquareSmall" style="width:30%">
-            <p><b>22</b></p>
-            <p>OCT</p>
-            <p>2025</p>
-          </div>
-          <div class="w3-col w3-container" style="width:70%">
-            <p>Showcase</p>
+          <div class="w3-row">
+            <div class="w3-col w3-container eventSquareSmall" style="width:30%">
+              <p><b>22</b></p>
+              <p>OCT</p>
+              <p>2025</p>
+            </div>
+            <div class="w3-col w3-container" style="width:70%">
+              <p>Showcase</p>
+            </div>
           </div>
         </div>
       </div>
@@ -317,13 +321,15 @@
         <div class="eventSquare w3-center">
           <img class="w3-image eventSquareImage" src="Images/Events/ProtoplayTeams.jpg" alt="Tranzfuser Teams at Protoplay">
           <h3 style="padding-top:2px;">ProtoPlay</h3>
-          <div class="w3-col w3-container eventSquareSmall" style="width:30%">
-            <p><b>19 - 20</b></p>
-            <p>SEP</p>
-            <p>2025</p>
-          </div>
-          <div class="w3-col w3-container" style="width:70%">
-            <p>Showcase</p>
+          <div class="w3-row">
+            <div class="w3-col w3-container eventSquareSmall" style="width:30%">
+              <p><b>19 - 20</b></p>
+              <p>SEP</p>
+              <p>2025</p>
+            </div>
+            <div class="w3-col w3-container" style="width:70%">
+              <p>Showcase</p>
+            </div>
           </div>
         </div>
       </div>
@@ -331,13 +337,15 @@
       <div class="w3-col m3 w3-center">
         <div class="eventSquare w3-center">
           <h3 style="padding-top:2px;">Develop:Brighton</h3>
-          <div class="w3-col w3-container eventSquareSmall" style="width:30%">
-            <p><b>8 - 10</b></p>
-            <p>JUL</p>
-            <p>2025</p>
-          </div>
-          <div class="w3-col w3-container" style="width:70%">
-            <p>Showcase</p>
+          <div class="w3-row">
+            <div class="w3-col w3-container eventSquareSmall" style="width:30%">
+              <p><b>8 - 10</b></p>
+              <p>JUL</p>
+              <p>2025</p>
+            </div>
+            <div class="w3-col w3-container" style="width:70%">
+              <p>Showcase</p>
+            </div>
           </div>
         </div>
       </div>      
