--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
               <p>2025</p>
             </div>
             <div class="w3-col w3-container" style="width:70%">
-              <p>Showcase</p>
+              <p>Fate's Loop was showcased at EGX and MCM Comic Con at Excel London. A huge thanks to Game Anglia for providing a space for us at their booth.</p>
             </div>
           </div>
         </div>
@@ -317,7 +317,7 @@
               <p>2025</p>
             </div>
             <div class="w3-col w3-container" style="width:70%">
-              <p>Showcase</p>
+              <p>Abbygale attended the Ukie Student Conference at the University of Staffordshire to co-present a panel on starting a company.</p>
             </div>
           </div>
         </div>
@@ -336,7 +336,7 @@
               <p>2025</p>
             </div>
             <div class="w3-col w3-container" style="width:70%">
-              <p>Showcase</p>
+              <p>ProtoPlay was the first public showcase that we attended to recieve feedback on Fate's Loop. It was amazing to travel to Dundee, Scotland and meet our fellow Tranzfuser teams.</p>
             </div>
           </div>
         </div>
@@ -355,7 +355,7 @@
               <p>2025</p>
             </div>
             <div class="w3-col w3-container" style="width:70%">
-              <p>Showcase</p>
+              <p>Develop:Brighton was a great place to network and connect with people whilst also promoting ourselves and Astral Forge.</p>
             </div>
           </div>
         </div>
