--- a/games.html
+++ b/games.html
@@ -67,6 +67,7 @@
   <header class="w3-display-container w3-content w3-wide pictureOutline w3-hide-small" style="max-width:100%; height:100vh; overflow:hidden; padding-top:50px;">
     <div>
       <iframe width="100%" height="100%" src="https://www.youtube.com/embed/DDPGsVt02Wk" frameborder="0" allowfullscreen></iframe>
+      <img src="Images/Games/AstralForge_Showcase." atl="Fate's Loop Scenery">
     </div>
   </header>
     
