--- a/games.html
+++ b/games.html
@@ -64,7 +64,7 @@
 <!-- Page Content -->
 <!----------------------------------------------------------------------------- -->
  <!-- Header video -->
-  <header class="w3-display-container w3-content w3-wide pictureOutline w3-hide-small" style="overflow:hidden; padding-top:50px; width:100%; height:100vh;">
+  <header class="w3-display-container w3-content w3-wide pictureOutline w3-hide-small" style="overflow:hidden; padding-top:50px; width:100vw; height:100vh;">
     <div>
       <!--<iframe width="100%" height="100%" src="https://www.youtube.com/embed/DDPGsVt02Wk" frameborder="0" allowfullscreen></iframe>-->
       <img src="Images/Game/FatesLoopScene.png" width="100%" alt="Fates Loop Scene">
