--- a/games.html
+++ b/games.html
@@ -67,7 +67,7 @@
   <header class="w3-display-container w3-content w3-wide pictureOutline w3-hide-small" style="overflow:hidden; padding-top:50px;">
     <div>
       <!--<iframe width="100%" height="100%" src="https://www.youtube.com/embed/DDPGsVt02Wk" frameborder="0" allowfullscreen></iframe>-->
-      <img src="Images/Game/FatesLoopScene.png" width="1920px" alt="Fates Loop Scene">
+      <img src="Images/Game/FatesLoopScene.png" style="width:1920;" alt="Fates Loop Scene">
     </div>
   </header>
     
