--- a/games.html
+++ b/games.html
@@ -102,7 +102,7 @@
     </div>
   </div>
 
-  <div class="w3-display-container w3-content w3-wide pictureOutline w3-hide-small" style="overflow:hidden; padding-top:50px;">
+  <div class="w3-display-container w3-content w3-wide pictureOutline">
     <iframe width="100%" height="100%" src="https://www.youtube.com/embed/DDPGsVt02Wk" frameborder="0" allowfullscreen></iframe>
   </div>
 
