--- a/games.html
+++ b/games.html
@@ -104,8 +104,8 @@
 
   <br><br>
     
-  <div class="w3-display-container w3-wide pictureOutline">
-    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/DDPGsVt02Wk" frameborder="0" allowfullscreen></iframe>
+  <div class="videoWrapper pictureOutline">
+    <iframe src="https://www.youtube.com/embed/DDPGsVt02Wk" allowfullscreen></iframe>
   </div>
 
    <br><br>
