--- a/games.html
+++ b/games.html
@@ -105,7 +105,7 @@
   <br><br>
     
   <div class="videoWrapper pictureOutline">
-    <iframe style="width:100%;" src="https://www.youtube.com/embed/DDPGsVt02Wk" allowfullscreen></iframe>
+    <iframe style="width:100%; height:100%;" src="https://www.youtube.com/embed/DDPGsVt02Wk" allowfullscreen></iframe>
   </div>
 
    <br><br>
