--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
     <h3 class="w3-center"><b>PREVIOUS EVENTS,</b></h3>
     <br>
 
-    <div class="w3-row w3-row-padding slideshow-container" style="padding-left:5%; padding-right:5%;">
+    <div class="w3-row w3-row-padding" style="padding-left:5%; padding-right:5%;">
 
       <div class="mySlides">
         <div class="numberText">1/2</div>
