--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 
     <div class="w3-row w3-row-padding" style="padding-left:5%; padding-right:5%;">
 
-      <div class="mySlides">
+      <div class="mySlides fade">
         <div class="numberText">1/2</div>
         <div class="w3-col m3 w3-center">
           <a href="https://www.gameanglia.co.uk/direct/" target="_blank">
@@ -344,7 +344,7 @@
         </div> 
       </div>
         
-      <div class="mySlides">
+      <div class="mySlides fade">
         <div class="numberText">2/2</div>
         <div class="w3-col m3 w3-center">
           <a href="https://www.developconference.com/" target="_blank">
