--- a/index.html
+++ b/index.html
@@ -255,11 +255,12 @@
     <h3 class="w3-center"><b>PREVIOUS EVENTS,</b></h3>
     <br>
 
-    <div class="w3-row w3-row-padding" style="padding-left:5%; padding-right:5%;">
+    <!-- <div class="w3-row w3-row-padding" style="padding-left:5%; padding-right:5%;"> -->
+    <div class="w3-row w3-row-padding">
 
       <div class="mySlides fade">
         <div class="numberText">1/2</div>
-        <div class="w3-col m3 w3-center" style="padding-left:5%; padding-right:5%;">
+        <div class="w3-col m3 w3-center">
           <a href="https://www.gameanglia.co.uk/direct/" target="_blank">
             <div class="eventSquare w3-center">
               <div class="imageWrap">
