--- a/team.html
+++ b/team.html
@@ -158,7 +158,7 @@
         </div>
       </div>
 
-      <br class="w3-hide-small">
+      <br class="w3-hide-small"><p>T</p>
 
       <div class="fourColumnLayout w3-center">
         <div class="section one">
