--- a/team.html
+++ b/team.html
@@ -158,7 +158,7 @@
         </div>
       </div>
 
-      <br class="w3-hide-small">
+      <br class="w3-hide-small"><br class="w3-hide-small">
 
       <div class="w3-row">
         <div class="fourColumnLayout w3-center">
