--- a/team.html
+++ b/team.html
@@ -173,7 +173,7 @@
         </div>
       </div>
 
-      <br> <br class="w3-hide-small">
+      <br> <br class="w3-hide-small"><p></p>
 
       <div class="w3-row">
         <div class="w3-col w3-container w3-third">
