--- a/team.html
+++ b/team.html
@@ -112,7 +112,7 @@
       </div>
     </div>
 
-    <br class="w3-hide-small" style="margin-bottom: 40px;">
+    <div class="w3-hide-small" style="height:40px;"></div>
 
     <div class="w3-row">
       <div class="w3-col w3-container w3-third">
@@ -135,7 +135,7 @@
       </div>
 
       <div class="w3-col w3-container w3-third teamPlace">
-        <div class="w3-center"><img class="teamImage" src="Images/Logo/AstralForge_DarkHorizontal.svg" alt="Astral Forge Logo"></div>
+        <div class="w3-center"><img src="Images/Logo/AstralForge_DarkHorizontal.svg" alt="Astral Forge Logo"></div>
       </div>
       
       <div class="w3-col w3-container w3-third teamPlace">
